--- a/app/views/panel/user_answers/show.html.erb
+++ b/app/views/panel/user_answers/show.html.erb
@@ -65,7 +65,7 @@
 
             <% if log['event'] == 'see' %>
               <p class="mb-1">
-                Duração: <%= print_time(@user_answer.event_duration(log)) %>
+                Duração: <%= print_time(@user_answer.event_duration(log)) %> segundos
               </p>
             <% end %>
           </div>
