--- a/app/views/panel/exams/_form.html.erb
+++ b/app/views/panel/exams/_form.html.erb
@@ -14,15 +14,17 @@
         </small>
       </div>
 
-      <div class="form-group">
-        <label for="" class="required">Número de questões</label>
-        <%= f.number_field :number_of_questions, class: 'form-control', required: true %>
-      </div>
+      <% if exam.new_record? %>
+        <div class="form-group">
+          <label for="" class="required">Número de questões</label>
+          <%= f.number_field :number_of_questions, class: 'form-control', required: true %>
+        </div>
 
-      <div class="form-group">
-        <label for="" class="required">Quantidade de opções</label>
-        <%= f.number_field :number_of_options, class: 'form-control', required: true, value: 5 %>
-      </div>
+        <div class="form-group">
+          <label for="" class="required">Quantidade de opções</label>
+          <%= f.number_field :number_of_options, class: 'form-control', required: true, value: 5 %>
+        </div>
+      <% end %>
 
       <div class="form-group text-right">
         <button class="btn btn-primary">
