--- a/app/views/panel/exam_applications/question_analysis.html.erb
+++ b/app/views/panel/exam_applications/question_analysis.html.erb
@@ -27,7 +27,7 @@
         <div class="row">
           <div class="col-6">
             <div><b>QUESTÃO</b></div>
-            <p class="lead m-0"><%= question_index + 1 %></p>
+            <p class="lead m-0"><%= question_index + @exam.start_question_number %></p>
           </div>
 
           <div class="col-6">
