Only show result if user finished

--- a/app/views/panel/exam_applications/index.html.erb
+++ b/app/views/panel/exam_applications/index.html.erb
@@ -41,7 +41,7 @@
               <div>Simulado</div>
               <div><b><%= exam_application.exam.title %></b></div>
             </div>
-          <% elsif %>
+          <% elsif(current_user.answered?(exam_application)) %>
             <div class="col">
               <div>Acerto</div>
               <div><b><%= current_user.correctness_percentage(exam_application) %>%</b></div>
