--- a/app/views/layouts/panel/_navbar.html.erb
+++ b/app/views/layouts/panel/_navbar.html.erb
@@ -1,6 +1,9 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary py-3">
+<nav class="navbar navbar-expand-lg navbar-dark bg-brand py-3 mb-3">
   <div class="container">
-    <a class="navbar-brand" href="#">Nav10</a>
+    <a class="navbar-brand" href="#">
+      <!-- <img src="<%= image_url('brand.png') %>" alt=""> -->
+      Nav10
+    </a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
