--- a/app/views/panel/groups/index.html.erb
+++ b/app/views/panel/groups/index.html.erb
@@ -3,7 +3,7 @@
     <h1 class="page-header__title">Turmas</h1>
 
     <div class="page-header__actions">
-      <a href="<%= new_panel_group_path %>" class="btn btn-primary">Nova turma</a>
+      <a href="<%= new_panel_group_path %>" class="btn btn-accent">Nova turma</a>
     </div>
   </div>
 
@@ -13,23 +13,38 @@
     </div>
   <% end %>
 
+  <div class="row px-4 py-2">
+    <div class="col-8">
+      <b class="text-muted">Nome</b>
+    </div>
+
+    <div class="col-2">
+      <b class="text-muted">Nº de estudantes</b>
+    </div>
+
+    <div class="col-2 text-right">
+      <b class="text-muted">Ações</b>
+    </div>
+  </div>
+
   <% @groups.each do |group| %>
     <div class="card mb-1">
       <div class="card-body">
         <div class="row align-items-center">
-          <div class="col h5 m-0">
+          <div class="col-8 m-0">
             <a href="<%= edit_panel_group_path(group) %>">
-              <%= group.name %>
+              <b><%= group.name %></b>
             </a>
           </div>
 
-          <div class="col">
-            <div>Estudantes</div>
-            <div><b><%= group.users.count %></b></div>
+          <div class="col-2">
+            <%= group.users.count %>
           </div>
 
-          <div class="col-auto ml-auto">
-            <%= button_to "Excluir", panel_group_path(group), method: :delete, class: 'btn btn-sm btn-confirm', data: { confirm: 'Você tem certeza que deseja deletar esta turma?' } %>
+          <div class="col-2 text-right">
+            <%= button_to panel_group_path(group), method: :delete, class: 'btn btn-transparent btn-sm btn-confirm mr-2', title: 'Deletar', data: { confirm: 'Você tem certeza que deseja deletar esta turma?' } do %>
+              <i class="fas fa-times"></i>
+            <% end %>
           </div>
         </div>
       </div>
