--- a/app/views/panel/exam_applications/index.html.erb
+++ b/app/views/panel/exam_applications/index.html.erb
@@ -80,8 +80,13 @@
 
           <div class="col-md-2 text-right d-flex justify-content-end">
             <% if current_user.teacher? %>
-              <%= button_to "Excluir", panel_exam_application_path(exam_application), method: :delete, class: 'btn btn-sm btn-confirm mr-2', data: { confirm: 'Você tem certeza que deseja deletar esta aplicação?' } %>
-              <a href="<%= edit_panel_exam_application_path(exam_application) %>" class="btn btn-sm btn-primary">Editar</a>
+              <a title="Editar" href="<%= edit_panel_exam_application_path(exam_application) %>" class="btn btn-sm btn-transparent">
+                <i class="fas fa-pencil-alt"></i>
+              </a>
+
+              <%= button_to panel_exam_application_path(exam_application), method: :delete, class: 'btn btn-transparent btn-sm btn-confirm mr-2', title: 'Deletar', data: { confirm: 'Você tem certeza que deseja deletar esta aplicação?' } do %>
+                <i class="fas fa-times"></i>
+              <% end %>
             <% end %>
           </div>
         </div>
