--- a/app/views/panel/students/index.html.erb
+++ b/app/views/panel/students/index.html.erb
@@ -1,9 +1,9 @@
-<div class="container py-5">
+<div class="container py-4">
   <div class="page-header">
     <h1 class="page-header__title">Estudantes</h1>
 
     <div class="page-header__actions">
-      <a href="<%= new_panel_student_path %>" class="btn btn-primary">Novo estudante</a>
+      <a href="<%= new_panel_student_path %>" class="btn btn-accent">Novo estudante</a>
     </div>
   </div>
 
@@ -13,36 +13,38 @@
     </div>
   <% end %>
 
+  <div class="row px-4 py-2">
+    <div class="col-6">
+      <b class="text-muted">Nome</b>
+    </div>
+
+    <div class="col-4">
+      <b class="text-muted">E-mail</b>
+    </div>
+
+    <div class="col-2 text-right">
+      <b class="text-muted">Ações</b>
+    </div>
+  </div>
+
   <% @students.each do |student| %>
     <div class="card mb-1">
       <div class="card-body">
         <div class="row align-items-center">
-          <div class="col h5 m-0">
+          <div class="col m-0">
             <a href="<%= edit_panel_student_path(student) %>">
-              <%= student.name %>
+              <b><%= student.name %></b>
             </a>
           </div>
 
-          <div class="col">
-            <div>E-mail</div>
-            <div><b><%= student.email %></b></div>
+          <div class="col-4">
+            <%= student.email %>
           </div>
 
-          <div class="col">
-            <div>Turmas</div>
-            <div>
-              <% if student.groups.empty? %>
-                <b class="text-muted">Nenhuma</b>
-              <% end %>
-
-              <% student.groups.each do |group| %>
-                <div><b><%= group.name %></b></div>
-              <% end %>
-            </div>
-          </div>
-
-          <div class="col-auto ml-auto">
-            <%= button_to "Excluir", panel_student_path(student), method: :delete, class: 'btn btn-sm btn-confirm', data: { confirm: 'Você tem certeza que deseja deletar este estudante?' } %>
+          <div class="col-2 text-right">
+            <%= button_to panel_student_path(student), method: :delete, class: 'btn btn-transparent btn-sm btn-confirm mr-2', title: 'Deletar', data: { confirm: 'Você tem certeza que deseja deletar este estudante?' } do %>
+              <i class="fas fa-times"></i>
+            <% end %>
           </div>
         </div>
       </div>
