Add new analysis panel

--- a/app/views/panel/exam_applications/index.html.erb
+++ b/app/views/panel/exam_applications/index.html.erb
@@ -40,7 +40,7 @@
   </div>
 
   <% @exam_applications.each do |exam_application| %>
-    <div class="card mb-1 card-hover">
+    <div class="card mb-1">
       <div class="card-body">
         <div class="row align-items-center">
           <div class="col-8 col-md-3 m-0">
