Add navbar active

--- a/app/views/layouts/panel/_navbar.html.erb
+++ b/app/views/layouts/panel/_navbar.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <a class="navbar-brand" href="#">
       <!-- <img src="<%= image_url('brand.png') %>" alt=""> -->
-      Nav10
+      <b>nav</b><span class="text-colored--light">10</span>
     </a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
