--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,14 @@ button {
   outline: 0 !important;
 }
 
+.text-colored {
+  color: $colored-color !important;
+}
+
+.text-colored--light {
+  color: #ff8582 !important;
+}
+
 @mixin box_shadow ($level) {
   @if $level == 1 {
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
